// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data_view active_adv_dataset_1 1`] = `
Object {
  "res": Object {
    "activeAdventures": Object {},
    "finishedAdventures": Object {
      "1651683600": Object {
        "finishedMineIds": Array [
          10530,
        ],
        "timestamp": 2022-05-04T17:00:00.000Z,
        "totalRigy": 105,
        "totalRiken": 0.567,
        "unixDay": 1651683600,
      },
    },
    "note": Object {
      "lastMine": 10530,
      "lastMineUnlockAt": 2022-05-05T04:05:20.000Z,
    },
    "playerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
  },
}
`;

exports[`data_view active_adv_dataset_2 1`] = `
Object {
  "res": Object {
    "activeAdventures": Object {
      "10530": Object {
        "farmerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
        "farmerEndTime": 2022-05-05T04:05:20.000Z,
        "farmerPories": Array [
          1876,
          1346,
          5420,
        ],
        "farmerRewardLevel": Array [
          2,
          2,
          3,
        ],
        "farmerSlots": Array [
          3,
          6,
          9,
        ],
        "isFarmer": true,
        "isSupporter": false,
        "mineId": 10530,
        "startTime": 2022-05-05T01:05:20.000Z,
        "state": "AdventureSupported2",
        "supporterAddress": "0x3048AA7A4Eb54bdc7f7b35d98603A18718380993",
        "supporterEndTime": 2022-05-05T04:05:20.000Z,
        "supporterPories": Array [
          4430,
          2768,
          2334,
          1586,
        ],
        "supporterRewardLevel": Array [
          1,
          3,
          4,
          2,
        ],
        "supporterSlots": Array [
          2,
          5,
          8,
          7,
        ],
      },
    },
    "finishedAdventures": Object {},
    "note": Object {},
    "playerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
  },
}
`;

exports[`data_view active_adv_dataset_3 1`] = `
Object {
  "res": Object {
    "activeAdventures": Object {},
    "finishedAdventures": Object {},
    "note": Object {},
    "playerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
  },
}
`;

exports[`data_view active_adv_dataset_4 1`] = `
Object {
  "res": Object {
    "activeAdventures": Object {
      "52084": Object {
        "farmerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
        "farmerEndTime": 2022-07-15T06:04:35.000Z,
        "farmerPories": Array [
          1529,
          6060,
          3923,
          6266,
        ],
        "farmerRewardLevel": Array [
          2,
          4,
          2,
          4,
        ],
        "farmerSlots": Array [
          7,
          4,
          9,
          4,
        ],
        "isFarmer": true,
        "isSupporter": false,
        "mineId": 52084,
        "startTime": 2022-07-15T03:04:35.000Z,
        "state": "AdventureSupported2",
        "supporterAddress": "0xA58FBB9328544B092020083E22994e9F8A4Ba4b9",
        "supporterEndTime": 2022-07-15T06:04:35.000Z,
        "supporterPories": Array [
          100306,
          4274,
          100455,
          100304,
        ],
        "supporterRewardLevel": Array [
          3,
          3,
          4,
          3,
        ],
        "supporterSlots": Array [
          2,
          3,
          4,
          1,
        ],
      },
    },
    "finishedAdventures": Object {},
    "note": Object {},
    "playerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
  },
}
`;

exports[`data_view active_adv_debug 1`] = `
Object {
  "res": Object {
    "activeAdventures": Object {
      "91498": Object {
        "farmerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
        "farmerEndTime": 2022-08-06T10:15:30.000Z,
        "farmerPories": Array [
          100508,
          5387,
          6060,
          6266,
        ],
        "farmerRewardLevel": Array [
          2,
          2,
          4,
          1,
        ],
        "farmerSlots": Array [
          3,
          8,
          5,
          9,
        ],
        "isFarmer": true,
        "isSupporter": false,
        "mineId": 91498,
        "startTime": 2022-08-06T07:15:30.000Z,
        "state": "AdventureFortified",
        "supporterAddress": "0xd88627151A38cD49877dCeaB4Bdf1e682Dfa4819",
        "supporterEndTime": 2022-08-06T10:15:30.000Z,
        "supporterPories": Array [
          100766,
          5131,
          5425,
        ],
        "supporterRewardLevel": Array [
          4,
          3,
          3,
        ],
        "supporterSlots": Array [
          5,
          7,
          2,
        ],
      },
    },
    "finishedAdventures": Object {},
    "note": Object {},
    "playerAddress": "0xdF218Bd4414E0B1D581BDdF64498ABBa8cCe0EcA",
  },
}
`;
